# genesis-protocol

./: .env.example  .gitignore  Makefile  README.md  claude.md  docker-compose.yml
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: build-push.yml  ci.yml  deploy-gcp.yml  deploy-production.yml
argocd/applications/: genesis-production.yaml  genesis-staging.yaml
argocd/projects/: genesis.yaml
backend/: Dockerfile  README.md  pyproject.toml
backend/src/genesis/: __init__.py  config.py  main.py
backend/src/genesis/auth/: __init__.py  dependencies.py  router.py  schemas.py  service.py
backend/src/genesis/canon/: __init__.py  router.py
backend/src/genesis/content/: __init__.py  router.py
backend/src/genesis/core/: database.py  exceptions.py  middleware.py  redis.py  security.py
backend/src/genesis/guardian/: __init__.py  router.py
backend/src/genesis/heroes/: __init__.py  repository.py  router.py  schemas.py  service.py
backend/src/genesis/jobs/: __init__.py  canon_updater.py  episode_generator.py  router.py
backend/src/genesis/moderation/: __init__.py  router.py
backend/src/genesis/presence/: __init__.py  manager.py  router.py
backend/src/genesis/rooms/: __init__.py  base.py
backend/src/genesis/rooms/art_department/: __init__.py  agent.py  schemas.py
backend/src/genesis/rooms/studio/: __init__.py  agent.py  schemas.py
backend/src/genesis/rooms/writers_room/: __init__.py  agent.py  prompts.py  schemas.py
backend/src/genesis/social/: __init__.py  router.py
backend/tests/: conftest.py  test_health.py
docs/: GCP_SETUP.md
frontend/: Dockerfile  next.config.js  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/hero/: layout.tsx  page.tsx
frontend/src/app/onboarding/: layout.tsx
frontend/src/components/dashboard/: child-card.tsx  content-settings.tsx  episode-list.tsx  pending-approvals.tsx
frontend/src/components/layout/: dashboard-nav.tsx
frontend/src/components/ui/: theme-toggle.tsx
frontend/src/lib/: api.ts  theme.tsx
infra/kubernetes/base/: namespace.yaml
infra/kubernetes/base/genesis-agents/: cronjob-episode-gen.yaml  kustomization.yaml  serviceaccount.yaml
infra/kubernetes/base/genesis-api/: configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  (+2 more)
infra/terraform/: backend.tf
scripts/: seed-neo4j.py  setup-gcp.sh
(+22 files in other folders)
